--- a/netreader/main.html
+++ b/netreader/main.html
@@ -1,7 +1,8 @@
 <html>
-
+<head>
+<meta charset="utf-8">
+<title>negu-dev ネットリーダー メインページ</title>
 <body>
-
 <div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; background-color: #88c0ee;">
     <h1 style="margin-top: 10px;"><span style="color: #000000;"><strong>negu-dev ネットリーダー メインページ</strong></span></h1>
 </div>
@@ -29,5 +30,5 @@
 <li><a href="http://www.htmq.com/html5/sample/004_1.html">html5 videoタグ</a></li>
 </ul>
 </body>
-
+</head>
 </html>
