--- a/top.html
+++ b/top.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta charset="utf-8">
 <title>negu-dev ポータルページ</title>
 <body>
 <div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; background-color: #88c0ee;">
