--- a/top.html
+++ b/top.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>negu-dev ƒ|[ƒ^ƒ‹ƒy[ƒW</title>
+<title>negu-dev ãƒãƒ¼ã‚¿ãƒ«ãƒšãƒ¼ã‚¸</title>
 <body>
 <div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; background-color: #88c0ee;">
-    <h1 style="margin-top: 10px;"><span style="color: #000000;"><strong>negu-dev ƒ|[ƒ^ƒ‹ƒy[ƒW</strong></span></h1>
+    <h1 style="margin-top: 10px;"><span style="color: #000000;"><strong>negu-dev ãƒãƒ¼ã‚¿ãƒ«ãƒšãƒ¼ã‚¸</strong></span></h1>
 </div>
 <ul>
-<li><a href="netreader/main.html">ƒlƒbƒgƒŠ[ƒ_[</a></li>
+<li><a href="netreader/main.html">ãƒãƒƒãƒˆãƒªãƒ¼ãƒ€ãƒ¼</a></li>
 </ul>
 </body>
 </head>
