--- a/netreader/main.html
+++ b/netreader/main.html
@@ -1,33 +1,33 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>negu-dev ƒlƒbƒgƒŠ[ƒ_[ ƒƒCƒ“ƒy[ƒW</title>
+<title>negu-dev ãƒãƒƒãƒˆãƒªãƒ¼ãƒ€ãƒ¼ ãƒ¡ã‚¤ãƒ³ãƒšãƒ¼ã‚¸</title>
 <body>
 <div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; background-color: #88c0ee;">
-    <h1 style="margin-top: 10px;"><span style="color: #000000;"><strong>negu-dev ƒlƒbƒgƒŠ[ƒ_[ ƒƒCƒ“ƒy[ƒW</strong></span></h1>
+    <h1 style="margin-top: 10px;"><span style="color: #000000;"><strong>negu-dev ãƒãƒƒãƒˆãƒªãƒ¼ãƒ€ãƒ¼ ãƒ¡ã‚¤ãƒ³ãƒšãƒ¼ã‚¸</strong></span></h1>
 </div>
 
-<h1>ŽŽŒ±—p ƒTƒ“ƒvƒ‹ƒy[ƒW</h1>
+<h1>è©¦é¨“ç”¨ ã‚µãƒ³ãƒ—ãƒ«ãƒšãƒ¼ã‚¸</h1>
 <ul>
-<li><a href="sample.html">ƒTƒ“ƒvƒ‹(‰æ‘œAƒvƒŒ[ƒ“ƒeƒLƒXƒgAƒAƒ“ƒJ[)</a></li>
-<li><a href="sample_sentence.html">•¶Í</a></li>
-<li><a href="sample_heading.html">Œ©o‚µ</a></li>
-<li><a href="sample_separetor.html">ƒZƒpƒŒ[ƒ^</a></li>
-<li><a href="sample_table.html">ƒe[ƒuƒ‹</a></li>
-<li><a href="sample_english.html">‰pŽš + ‚»‚Ì‘¼‚Ì‘g‚Ý‡‚í‚¹</a></li>
-<li><a href="sample_form.html">ƒtƒH[ƒ€</a></li>
-<li><a href="sample_form_input.html">ƒtƒH[ƒ€—v‘f(“ü—Í)</a></li>
-<li><a href="sample_combobox.html">ƒRƒ“ƒ{ƒ{ƒbƒNƒX</a>
-<li><a href="sample_ruby.html">ƒ‹ƒr•¶Žš</a></li>
+<li><a href="sample.html">ã‚µãƒ³ãƒ—ãƒ«(ç”»åƒã€ãƒ—ãƒ¬ãƒ¼ãƒ³ãƒ†ã‚­ã‚¹ãƒˆã€ã‚¢ãƒ³ã‚«ãƒ¼)</a></li>
+<li><a href="sample_sentence.html">æ–‡ç« </a></li>
+<li><a href="sample_heading.html">è¦‹å‡ºã—</a></li>
+<li><a href="sample_separetor.html">ã‚»ãƒ‘ãƒ¬ãƒ¼ã‚¿</a></li>
+<li><a href="sample_table.html">ãƒ†ãƒ¼ãƒ–ãƒ«</a></li>
+<li><a href="sample_english.html">è‹±å­— + ãã®ä»–ã®çµ„ã¿åˆã‚ã›</a></li>
+<li><a href="sample_form.html">ãƒ•ã‚©ãƒ¼ãƒ </a></li>
+<li><a href="sample_form_input.html">ãƒ•ã‚©ãƒ¼ãƒ è¦ç´ (å…¥åŠ›)</a></li>
+<li><a href="sample_combobox.html">ã‚³ãƒ³ãƒœãƒœãƒƒã‚¯ã‚¹</a>
+<li><a href="sample_ruby.html">ãƒ«ãƒ“æ–‡å­—</a></li>
 </ul>
 
-<h1>ŠO•” ƒTƒ“ƒvƒ‹ƒy[ƒW</h1>
+<h1>å¤–éƒ¨ ã‚µãƒ³ãƒ—ãƒ«ãƒšãƒ¼ã‚¸</h1>
 <ul>
-<li><a href="http://bubuzuke.s7.xrea.com/frame-sample.files/Frameset-01/index.html">ƒtƒŒ[ƒ€ ‚Q•ªŠ„</a></li>
-<li><a href="http://bubuzuke.s7.xrea.com/frame-sample.files/Frameset-05/index.html">ƒtƒŒ[ƒ€ ‚R•ªŠ„</a></li>
-<li><a href="http://bubuzuke.s7.xrea.com/frame-sample.files/Frameset-11/index.html">ƒtƒŒ[ƒ€ ‚S•ªŠ„</a></li>
+<li><a href="http://bubuzuke.s7.xrea.com/frame-sample.files/Frameset-01/index.html">ãƒ•ãƒ¬ãƒ¼ãƒ  ï¼’åˆ†å‰²</a></li>
+<li><a href="http://bubuzuke.s7.xrea.com/frame-sample.files/Frameset-05/index.html">ãƒ•ãƒ¬ãƒ¼ãƒ  ï¼“åˆ†å‰²</a></li>
+<li><a href="http://bubuzuke.s7.xrea.com/frame-sample.files/Frameset-11/index.html">ãƒ•ãƒ¬ãƒ¼ãƒ  ï¼”åˆ†å‰²</a></li>
 <hr>
-<li><a href="http://www.htmq.com/html5/sample/004_1.html">html5 videoƒ^ƒO</a></li>
+<li><a href="http://www.htmq.com/html5/sample/004_1.html">html5 videoã‚¿ã‚°</a></li>
 </ul>
 </body>
 </head>
