アンカータグのテストページコンテンツの追加

--- a/netreader/main.html
+++ b/netreader/main.html
@@ -10,6 +10,7 @@
 <h1>試験用 サンプルページ</h1>
 <ul>
 <li><a href="sample.html">サンプル(画像、プレーンテキスト、アンカー)</a></li>
+<li><a href="sample_anchor.html">アンカー</a></li>
 <li><a href="sample_sentence.html">文章</a></li>
 <li><a href="sample_heading.html">見出し</a></li>
 <li><a href="sample_separetor.html">セパレータ</a></li>
