水平線追加

--- a/netreader/main.html
+++ b/netreader/main.html
@@ -20,6 +20,7 @@
 <li><a href="sample_form_input.html">フォーム要素(入力)</a></li>
 <li><a href="sample_combobox.html">コンボボックス</a>
 <li><a href="sample_ruby.html">ルビ文字</a></li>
+<li><a href="sample_suiheisen.html">水平線</a></li>
 </ul>
 
 <h1>外部 サンプルページ</h1>
