--- a/netreader/main.html
+++ b/netreader/main.html
@@ -4,7 +4,7 @@
 <title>negu-dev ネットリーダー メインページ</title>
 <body>
 <div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; background-color: #88c0ee;">
-    <h1 style="margin-top: 10px;"><span style="color: #000000;"><strong>negu-dev ネットリーダー メインページ</strong></span></h1>
+    <h1 style="margin-top: 10px;"><span style="color: #000000;"><strong>negu-dev ネットリーダー メインページ</strong></h1>
 </div>
 
 <h1>試験用 サンプルページ</h1>
