エディットコントロール：入力済みのテキストを追加

--- a/netreader/sample_form_input.html
+++ b/netreader/sample_form_input.html
@@ -9,6 +9,8 @@
 <form>
 <dl>
 <dt>input type=&#8221;text&#8221;</dt>
+<dd><input type="text" value="おはようございます"></dd>
+<dt>input type=&#8221;text&#8221;</dt>
 <dd><input type="text"></dd>
 <dt>input type=&#8221;text&#8221; list=&#8221;xxxxxx&#8221; + datalist id=&#8221;xxxxxx&#8221;</dt>
 <dd><input type="text" list="xxxxxx"><datalist id="xxxxxx"><option value="サジェストします　１"><option value="サジェストします　２"><option value="サジェストします　３"><option value="サジェストします　４"><option value="サジェストします　５"></datalist></dd>
