不具合 試験用ページの追加

--- a/netreader/main.html
+++ b/netreader/main.html
@@ -7,6 +7,11 @@
     <h1 style="margin-top: 10px;"><span style="color: #000000;"><strong>negu-dev ネットリーダー メインページ</strong></h1>
 </div>
 
+<h1>不具合 試験用 サンプルページ</h1>
+<ul>
+<li><a href="sample_form_input2.html">Chromeアドイン(ExChrome.dll)によるエディットコントロールの音声ガイド出力問題</a></li>
+</ul>
+
 <h1>試験用 サンプルページ</h1>
 <ul>
 <li><a href="sample.html">サンプル(画像、プレーンテキスト、アンカー)</a></li>
