--- a/netreader/sample_form_input2.html
+++ b/netreader/sample_form_input2.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -6,6 +6,13 @@
 <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<p>エディットコントロールに初期値(value要素)が設定されている場合、フォーカスがセットされた状態で次の移動コマンドを使用すると
+『エディットに設定されたカーソル位置の文字』 『補助ガイド(※左端や右端)』
+読み上げてしまう問題を確認しています。
+
+・前/次の文字へ移動(Ctrl + ←、Ctrl + →)
+・前/次の文節へ移動(←、→)
+</p>
 <form>
 <dl>
 <dt>input type=&#8221;text&#8221;</dt>
