サンプルページを追加

--- a/netreader/main.html
+++ b/netreader/main.html
@@ -7,10 +7,12 @@
     <h1 style="margin-top: 10px;"><span style="color: #000000;"><strong>negu-dev ネットリーダー メインページ</strong></h1>
 </div>
 
+<!--
 <h1>不具合 試験用 サンプルページ</h1>
 <ul>
 <li><a href="sample_form_input2.html">Chromeアドイン(ExChrome.dll)によるエディットコントロールの音声ガイド出力問題</a></li>
 </ul>
+!-->
 
 <h1>試験用 サンプルページ</h1>
 <ul>
@@ -23,6 +25,7 @@
 <li><a href="sample_english.html">英字 + その他の組み合わせ</a></li>
 <li><a href="sample_form.html">フォーム</a></li>
 <li><a href="sample_form_input.html">フォーム要素(入力)</a></li>
+<li><a href="sample_form2.html">フォーム(1行に連続するコントロール)</a></li>
 <li><a href="sample_slider.html">スライダー</a></li>
 <li><a href="sample_combobox.html">コンボボックス</a>
 <li><a href="sample_ruby.html">ルビ文字</a></li>
