Amazon商品検索のテストページを追加

--- a/netreader/main.html
+++ b/netreader/main.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head>
 <meta charset="utf-8">
 <title>negu-dev ネットリーダー メインページ</title>
@@ -32,6 +32,11 @@
 <li><a href="sample_ruby.html">ルビ文字</a></li>
 <li><a href="sample_suiheisen.html">水平線</a></li>
 <li><a href="sample_bulletedlist.html">箇条書きリスト</a></li>
+</ul>
+
+<h1>試験用 アドインページ</h1>
+<ul>
+<li><a href="https://aok-net.jp/netreader/addin/nramasearch/test_v5/home.php">Amazon商品検索(PA-API v5 対応中)</a></li>
 </ul>
 
 <h1>外部 サンプルページ</h1>
