--- a/netreader/main.html
+++ b/netreader/main.html
@@ -32,6 +32,7 @@
 <li><a href="sample_ruby.html">ルビ文字</a></li>
 <li><a href="sample_suiheisen.html">水平線</a></li>
 <li><a href="sample_bulletedlist.html">箇条書きリスト</a></li>
+<li><a href="sample_cursolpos_Info.html">カーソル位置情報読みテストページ(Alt + F3)</a></li>
 </ul>
 
 <h1>試験用 アドインページ</h1>
