--- a/netreader/sample_ruby.html
+++ b/netreader/sample_ruby.html
@@ -21,5 +21,11 @@
     <br>
     <p>未対応ブラウザ対策あり</p>
     <p><ruby>漢<rp>（</rp><rt>かん</rt><rp>）</rp>字<rp>（</rp><rt>じ</rt><rp>）</rp></ruby></p>
+    <p>ルビ + ハイパーリンク</p>
+    <p><a href="https://yahoo.co.jp"><ruby>宇宙<rt>そら</rt></ruby></a></p>
+    <p>見出し + ルビ</p>
+    <h2><ruby>宇宙<rt>そら</rt></ruby></h2>
+    <p>見出し + ハイパーリンク + ルビ</p>
+    <h2><a href="https://yahoo.co.jp"><ruby>宇宙<rt>そら</rt></ruby></a></h2>
 </body>
 </html>
